--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"axios": "^0.19.0",
 		"express": "^4.17.1",
 		"express-favicon": "^2.0.1",
+		"newrelic": "^6.2.0",
 		"path": "^0.12.7",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
